tests/derive/ui/enum.stderr
error: proc-macro derive panicked
 --> $DIR/enum.rs:4:10
  |
4 | #[derive(Document, Serialize, Deserialize)]
  |          ^^^^^^^^
  |
  = help: message: Document can be only be derived for structs: Error("expected `struct`")
